# Alfred

./: .gitignore  CONFIG_SUMMARY.md  README.md  alfred.py  config.test.yaml  config.yaml  database_manager.py  init.sql  pyproject.toml  pytest.toml  requirements.txt
docs/: CONFIG.md  DATABASE.md
src/: alfred.py
src/alfred/: alfred.py  main.py
src/alfred/extra/: dev.py  flask_app.py
src/alfred/slack/: app.py  block_builder.py  butler.py  patrol_launcher.py
src/alfred/slack/listeners/: __init__.py  action.py  base.py  command.py  home.py
src/alfred/task/: bulletin.py  engine_launcher.py  task_engine.py
src/alfred/task/vault/: README.md  __init__.py  models.py  sa_vault.py  sqlite_vault.py
src/alfred/utils/: config.py  format.py
src/extra/: dev.py  flask_app.py
src/slack/: app.py  butler.py  patrol_launcher.py  reminder_launcher.py
src/slack/listeners/: __init__.py  action.py  base.py  command.py  mention.py  message.py
src/task/: bulletin.py  engine_launcher.py  task_engine.py
src/task/database/: README.md  archive.py  database_manager.py  init.sql
src/task/vault/: sqlite_init.sql  sqlite_vault.py
src/utils/: config.py  logger_config.py  readable.py
tests/: conftest.py  test_archive.py  test_block_builder.py  test_bulletin.py  test_butler.py  test_config.py  test_database_manager.py  test_engine_scheduler.py  test_patrol_launcher.py  test_slack_integration.py  test_task_engine.py  test_vault.py
