[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    "node_modules",
    ".pytest_cache",
    ".vscode",
]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alfred"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]  # 告诉 setuptools 你的包在 "src" 目录里

[project.scripts]
alfred = "alfred.alfred:alfred_in"
